--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <img id="acierto" src="">
 
 
-    <script src="./JS/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
